--- a/Payment.csproj
+++ b/Payment.csproj
@@ -13,6 +13,8 @@
     <Copyright>© Helvetitec Technologies Ltda 2024</Copyright>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <RootNamespace>SharpControls.Payment</RootNamespace>
+    <PackageProjectUrl>https://github.com/sharpcontrols/Payment</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,6 +26,10 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
